--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="assets/images/taskflow.png" type="image/png"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaskMaster Pro</title>
+    <title>TaskFlow</title>
     <link rel="stylesheet" href="https://cdn.replit.com/agent/bootstrap-agent-dark-theme.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -17,7 +18,7 @@
                     <div class="d-flex align-items-center justify-content-between">
                         <div>
                             <h1 class="display-5 mb-0">
-                                <i class="fas fa-check-circle text-primary me-2"></i>TaskMaster Pro
+                                <i class="fas fa-check-circle text-primary me-2"></i>TaskFlow
                             </h1>
                             <p class="text-muted">Transform your tasks into achievements</p>
                         </div>
